<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.shaum.airportassistant.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="80dp"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Toolbar.TitleText"
                android:layout_gravity="center"
                android:text="Airport Assistant"
                android:textSize="32dp"
                android:textColor="@color/colorActionBar"
                android:id="@+id/toolbar_title" />



    </android.support.v7.widget.Toolbar>

    <TextView
            android:text="Will you be checking in hold luggage?"
            android:layout_width="291dp"
            android:layout_height="67dp"
            android:textColor="@color/colorDefaultText"
            android:gravity="center"
            android:textSize="23sp"
            android:id="@+id/checkLugaggeQuestion"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/radioMode" app:layout_constraintVertical_bias="0.755"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


    <RadioGroup
            android:id="@+id/radioMode"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bookedWeightNumber"
            app:layout_constraintVertical_bias="0.498" app:layout_constraintHorizontal_bias="0.421">


        <RadioButton
                android:text="Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioYes"
                android:drawableStart="@drawable/tickoption"
                android:textSize="1dp"
                android:padding="10dp"
                android:textColor="@android:color/transparent"/>


        <RadioButton
                android:text="No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioNo"
                android:padding="10dp"
                android:drawableStart="@drawable/xoption"
                android:textSize="1dp"
                android:textColor="@android:color/transparent"/>
    </RadioGroup>

    <TextView
            android:text="Booked Weight?"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:textColor="@color/colorDefaultText"
            android:gravity="center"
            android:textSize="23sp"
            android:id="@+id/bookedWeightQuestion"
            app:layout_constraintEnd_toStartOf="@+id/actualWeightQuestion" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="105dp" app:layout_constraintTop_toBottomOf="@+id/radioMode"
            app:layout_constraintHorizontal_bias="0.483" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bookedWeightKG2" app:layout_constraintVertical_bias="0.549"/>

    <EditText
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:gravity="center"
            android:textSize="25dp"
            android:id="@+id/actualWeightNumber"
            app:layout_constraintStart_toEndOf="@+id/bookedWeightKG2" android:layout_marginStart="98dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintVertical_bias="0.655"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="130dp"
            app:layout_constraintHorizontal_bias="0.43" android:layout_marginTop="50dp"/>

    <TextView
            android:text="KG"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textColor="@color/colorDefaultText"
            android:gravity="center"
            android:textSize="23sp"
            android:id="@+id/bookedWeightKG"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintHorizontal_bias="0.877" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.477" app:layout_constraintTop_toBottomOf="@+id/radioMode"/>


    <TextView
            android:text="KG"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textColor="@color/colorDefaultText"
            android:gravity="center"
            android:textSize="23sp"
            android:id="@+id/bookedWeightKG2"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btBeginJourney"
            app:layout_constraintTop_toBottomOf="@+id/radioMode"
            app:layout_constraintEnd_toStartOf="@+id/bookedWeightKG" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="35dp"
            app:layout_constraintHorizontal_bias="0.407" app:layout_constraintVertical_bias="0.678"
    />
    <TextView
            android:text="Actual Weight?"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:textColor="@color/colorDefaultText"
            android:gravity="center"
            android:textSize="23sp"
            android:id="@+id/actualWeightQuestion"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.902"
            app:layout_constraintTop_toBottomOf="@+id/radioMode" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.03"/>

    <EditText
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:gravity="center"
            android:textSize="25dp"
            android:id="@+id/bookedWeightNumber"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/actualWeightNumber" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.316" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="65dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.696"/>
    <Button
            android:text="Begin Journey"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:background="@drawable/buttons_general"
            android:id="@+id/btBeginJourney"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/actualWeightQuestion"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/actualWeightQuestion"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.756"/>


</android.support.constraint.ConstraintLayout>
